<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_mian_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/header_ll"
        layout="@layout/header" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:scrollbars="none"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_ll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_retc_white"
                android:orientation="vertical"
                android:padding="@dimen/margin_normal">

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="便民服务登记表"
                    android:textColor="@color/title_blue"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/title_blue" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/civilized_date" />

                    <TextView
                        android:id="@+id/et_date"
                        style="@style/EditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/civilized_time" />

                    <TextView
                        android:id="@+id/et_time"
                        style="@style/EditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/civilized_car_num" />

                    <com.zyf.view.KeyboardEditText
                        android:id="@+id/et_car_no"
                        style="@style/EditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:xml="@xml/province_abbreviation" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="服务类型：" />

                    <TextView
                        android:id="@+id/et_type"
                        style="@style/SpinnerStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/civilized_num" />

                    <EditText
                        android:id="@+id/et_num"
                        style="@style/EditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="6" />

                    <TextView
                        style="@style/TextGrayStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_normal"
                        android:text="个" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="使用物品：" />

                    <EditText
                        android:id="@+id/et_using_goods"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/selector_solid_gray"
                        android:minHeight="@dimen/line_height"
                        android:padding="5dp"
                        android:textColor="@color/gray_50"
                        android:textSize="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/civilized_remark" />

                        <EditText
                            android:id="@+id/et_remark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/selector_solid_gray"
                            android:minHeight="@dimen/line_height"
                            android:padding="5dp"
                            android:textColor="@color/gray_50"
                            android:textSize="14dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/selector_retc_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/margin_small">

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/civilized_out_people" />

                <ImageView
                    android:id="@+id/img_out_people"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:minHeight="@dimen/line_height"
                    android:scaleType="centerInside"
                    android:src="@drawable/selector_solid_gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:paddingBottom="@dimen/bottom_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:text="保存" />

                <Button
                    android:id="@+id/submit"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:text="提交" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>