<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_mian_bg"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <include
        android:id="@+id/header_ll"
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:background="@drawable/selector_retc_white"
        android:minHeight="@dimen/line_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_before"
            style="@style/smallTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|left"
            android:padding="@dimen/margin_normal"
            android:text="@string/before_month"
            android:textColor="@color/title_blue" />

        <TextView
            android:id="@+id/tv_form_title"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/onduty_form_title"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_next"
            style="@style/smallTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|right"
            android:padding="@dimen/margin_normal"
            android:text="@string/next_month"
            android:textColor="@color/title_blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/week_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:background="@drawable/selector_retc_week"
        android:minHeight="@dimen/line_height"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="周一"
            android:textStyle="bold" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="周二"
            android:textStyle="bold" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="周三"
            android:textStyle="bold" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="周四"
            android:textStyle="bold" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="周五"
            android:textStyle="bold" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="周六"
            android:textStyle="bold" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="周日"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/list_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:orientation="horizontal"
                android:paddingLeft="0.5dp"
                android:visibility="gone">

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray_a3" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/refresh_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="7"
                    tools:listitem="@layout/item_onduty_form" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_remark"
                style="@style/smallTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:minHeight="@dimen/line_height"
                android:padding="@dimen/margin_normal" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/img_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/selector_retc_white"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_normal"
        android:scaleType="center"
        android:src="@mipmap/no_data" />
</LinearLayout>
